--- a/src/home/components/Moodboard.css
+++ b/src/home/components/Moodboard.css
@@ -1,7 +1,5 @@
 @import 'src/palette.css';
 
 .moodboardCanvas {
-  width: 100%;
-  height: 100%;
   background-color: var(--white);
 }
